Add pagination test

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,3 +8,10 @@ jane_doe:
   name: Jane Doe
   email: jane.d@anon.com
   password_digest: <%= User.digest('password')%>
+
+<% 40.times do |n| %>
+user_<%= n %>:
+  name: <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
