--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -14,6 +14,13 @@ jane_doe:
   activated: true
   activated_at: <%= Time.zone.now%>
 
+rossie_lee:
+  name: Rossie Lee
+  email: r.lee@beverages.com
+  password_digest: <%= User.digest('password')%>
+  activated: true
+  activated_at: <%= Time.zone.now%>
+
 <% 40.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
