Add following and followers views
* Add a view for the list of users who a given user follows.
* Add a view for the list of users who follow a given user.

--- a/test/fixtures/relationships.yml
+++ b/test/fixtures/relationships.yml
@@ -1,9 +1,17 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  follower_id: 1
-  followed_id: 2
+  follower: john_doe
+  followed: rossie_lee
 
 two:
-  follower_id: 1
-  followed_id: 3
+  follower: john_doe
+  followed: user_1
+
+three:
+  follower: rossie_lee
+  followed: john_doe
+
+four:
+  follower: jane_doe
+  followed: john_doe
